--- a/DL_Lab.ipynb
+++ b/DL_Lab.ipynb
@@ -5,6 +5,9 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
+      "collapsed_sections": [
+        "M9JgKfz-rXcl"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,8 +16,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -302,24 +304,33 @@
         "    self.b_or = -0.5\n",
         "    self.w_and = np.array([1,1])\n",
         "    self.b_and = -1.5\n",
-        "    self.w_out=np.array([1,1])\n",
-        "    self.b_out=-0.5\n",
+        "    self.w_out=np.array([1,-2])\n",
+        "    self.b_out= -0.5\n",
         "  def predict(self,x):\n",
         "    h1 = step(np.dot(self.w_or,x)+self.b_or)\n",
         "    h2 = step(np.dot(self.w_and,x)+self.b_and)\n",
         "    output = step(self.w_out[0]*h1 + self.w_out[1]*h2 + self.b_out)\n",
         "    return output\n",
+        "class NOT_gate:\n",
+        "    def __init__(self):\n",
+        "        self.w = -1\n",
+        "        self.b = 0.5\n",
+        "    def predict(self, x):\n",
+        "        return step(self.w * x + self.b)\n",
         "xor = XOR_network()\n",
-        "print(\"XOR Gate\")\n",
-        "for x in [(0,0),(0,1),(1,0),(1,1)]:\n",
-        "  print(x,\"->\",xor.predict(np.array(x)))"
+        "not_gate = NOT_gate()\n",
+        "print(\"XOR and ¬XOR Gates\")\n",
+        "for x in [(0,0), (0,1), (1,0), (1,1)]:\n",
+        "    xor_out = xor.predict(np.array(x))\n",
+        "    not_xor_out = not_gate.predict(xor_out)\n",
+        "    print(f\"{x} -> XOR: {xor_out}, ¬XOR: {not_xor_out}\")"
       ],
       "metadata": {
         "id": "YfKAws4losov",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99205b1a-d4a3-409d-bf3c-31c71ff71796"
+        "outputId": "aeec9266-4d2c-4051-e09d-81307a9d93c3"
       },
       "execution_count": null,
       "outputs": [
@@ -327,11 +338,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "XOR Gate\n",
-            "(0, 0) -> 0\n",
-            "(0, 1) -> 1\n",
-            "(1, 0) -> 1\n",
-            "(1, 1) -> 1\n"
+            "XOR and ¬XOR Gates\n",
+            "(0, 0) -> XOR: 0, ¬XOR: 1\n",
+            "(0, 1) -> XOR: 1, ¬XOR: 0\n",
+            "(1, 0) -> XOR: 1, ¬XOR: 0\n",
+            "(1, 1) -> XOR: 0, ¬XOR: 1\n"
           ]
         }
       ]
@@ -424,12 +435,423 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#demonstrate thresholding is harsh\n",
+        "import numpy as np\n",
+        "def step(x):\n",
+        "  return 1 if x >= 0 else 0\n",
+        "class Neuron:\n",
+        "  def __init__(self, weights, bias):\n",
+        "    self.weights = weights\n",
+        "    self.bias = bias\n",
+        "  def feedforward(self, inputs):\n",
+        "    total = np.dot(self.weights, inputs) + self.bias\n",
+        "    return step(total)\n",
+        "weights = np.array([0, 1])\n",
+        "b_1 = -3.1\n",
+        "b_2 = 2\n",
+        "b_3 = -3.0\n",
+        "n = Neuron(weights, b_1)\n",
+        "n_2 = Neuron(weights, b_2)\n",
+        "n_3 = Neuron(weights,b_3)\n",
+        "x = np.array([2, 3])\n",
+        "print(\"with bias -3.1:\",n.feedforward(x))\n",
+        "print(\"\\nwith bias -3.0:\",n_3.feedforward(x))\n",
+        "print(\"\\nwith bias 2:\",n_2.feedforward(x))"
+      ],
       "metadata": {
-        "id": "R4JAT_SrrcRz"
+        "id": "R4JAT_SrrcRz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c616e81d-5339-48c8-9a14-ff34878668a8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "with bias -3.1: 0\n",
+            "\n",
+            "with bias -3.0: 1\n",
+            "\n",
+            "with bias 2: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "dl = pd.read_csv(\"/content/dl-week2 - Sheet1.csv\")\n",
+        "X = dl['f1','f2','f3','f4']\n",
+        "y=dl['output'].values\n",
+        "x_train,x_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=42)\n",
+        "\n",
+        "def step(z):\n",
+        "  return 1 if z>=0 else 0\n"
+      ],
+      "metadata": {
+        "id": "DX6CBiUt2oOw"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# XOR and XNOR implementation using a Multi-Perceptron Network\n",
+        "\n",
+        "# Step activation function\n",
+        "def step(x):\n",
+        "    return 1 if x >= 0 else 0\n",
+        "\n",
+        "# Hidden layer perceptrons\n",
+        "def OR(x1, x2):\n",
+        "    w1, w2, b = 1, 1, -0.5\n",
+        "    return step(w1*x1 + w2*x2 + b)\n",
+        "\n",
+        "def AND(x1, x2):\n",
+        "    w1, w2, b = 1, 1, -1.5\n",
+        "    return step(w1*x1 + w2*x2 + b)\n",
+        "\n",
+        "# XOR using multi-perceptron\n",
+        "def XOR(x1, x2):\n",
+        "    h1 = OR(x1, x2)\n",
+        "    h2 = AND(x1, x2)\n",
+        "    w1, w2, b = 1, -2, -0.5\n",
+        "    return step(w1*h1 + w2*h2 + b)\n",
+        "\n",
+        "# XNOR (NOT XOR)\n",
+        "def XNOR(x1, x2):\n",
+        "    return 1 - XOR(x1, x2)\n",
+        "\n",
+        "# Testing the network\n",
+        "print(\"X1 X2 XOR XNOR\")\n",
+        "for x1 in [0, 1]:\n",
+        "    for x2 in [0, 1]:\n",
+        "        print(x1, x2, \" \", XOR(x1, x2), \" \", XNOR(x1, x2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YwQFtcmzFyWx",
+        "outputId": "284024f8-15d0-4ea7-ad0e-0579f080185f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X1 X2 XOR XNOR\n",
+            "0 0   0   1\n",
+            "0 1   1   0\n",
+            "1 0   1   0\n",
+            "1 1   0   1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# STEP 1: Create a small movie dataset and save as CSV\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "data = {\n",
+        "    \"MattDamon\": [1, 0, 1, 0, 1, 0, 1, 0],\n",
+        "    \"Thriller\":  [1, 1, 0, 0, 1, 0, 0, 1],\n",
+        "    \"Nolan\":     [0, 1, 0, 1, 1, 0, 0, 1],\n",
+        "    \"IMDB\":      [0.9, 0.8, 0.6, 0.4, 0.85, 0.3, 0.7, 0.5],\n",
+        "    \"Like\":      [1, 1, 1, 0, 1, 0, 1, 0]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "df.to_csv(\"movies.csv\", index=False)\n",
+        "\n",
+        "print(\"Movie Dataset:\")\n",
+        "print(df)\n",
+        "\n",
+        "X = df.drop(\"Like\", axis=1).values\n",
+        "y = df[\"Like\"].values\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# STEP 2: Activation Function\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "def step(x):\n",
+        "    return 1 if x >= 0 else 0\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# i) MP Perceptron (No weights, No bias)\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "def mp_perceptron_predict(x):\n",
+        "    return step(np.sum(x))   # equal importance to all features\n",
+        "\n",
+        "print(\"\\n--- MP Perceptron (No weights, No bias) ---\")\n",
+        "for i, x in enumerate(X):\n",
+        "    print(f\"Actual: {y[i]}  Predicted: {mp_perceptron_predict(x)}\")\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# ii) Perceptron with weights only (No bias)\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "def train_perceptron_no_bias(X, y, lr=0.1, epochs=10):\n",
+        "    w = np.zeros(X.shape[1])\n",
+        "    print(\"\\nTraining Perceptron (Weights only)\")\n",
+        "    for epoch in range(epochs):\n",
+        "        errors = 0\n",
+        "        for i in range(len(X)):\n",
+        "            y_pred = step(np.dot(X[i], w))\n",
+        "            error = y[i] - y_pred\n",
+        "            if error != 0:\n",
+        "                w = w + lr * error * X[i]\n",
+        "                errors += 1\n",
+        "        print(f\"Epoch {epoch+1}, Weights: {w}, Errors: {errors}\")\n",
+        "        if errors == 0:\n",
+        "            break\n",
+        "    return w\n",
+        "\n",
+        "w_no_bias = train_perceptron_no_bias(X, y)\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# iii) Perceptron with weights and bias\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "def train_perceptron_with_bias(X, y, lr=0.1, epochs=10):\n",
+        "    w = np.zeros(X.shape[1])\n",
+        "    b = 0\n",
+        "    print(\"\\nTraining Perceptron (Weights + Bias)\")\n",
+        "    for epoch in range(epochs):\n",
+        "        errors = 0\n",
+        "        for i in range(len(X)):\n",
+        "            y_pred = step(np.dot(X[i], w) + b)\n",
+        "            error = y[i] - y_pred\n",
+        "            if error != 0:\n",
+        "                w = w + lr * error * X[i]\n",
+        "                b = b + lr * error\n",
+        "                errors += 1\n",
+        "        print(f\"Epoch {epoch+1}, Weights: {w}, Bias: {b}, Errors: {errors}\")\n",
+        "        if errors == 0:\n",
+        "            break\n",
+        "    return w, b\n",
+        "\n",
+        "w_bias, b_bias = train_perceptron_with_bias(X, y)\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# STEP 3: Test with a sample movie\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "sample_movie = np.array([1, 1, 0, 0.8])  # Matt Damon, Thriller, Not Nolan, High IMDB\n",
+        "\n",
+        "print(\"\\n--- Testing Sample Movie ---\")\n",
+        "print(\"Sample features:\", sample_movie)\n",
+        "\n",
+        "print(\"MP Perceptron Prediction:\", mp_perceptron_predict(sample_movie))\n",
+        "print(\"Perceptron (Weights only):\", step(np.dot(sample_movie, w_no_bias)))\n",
+        "print(\"Perceptron (Weights + Bias):\", step(np.dot(sample_movie, w_bias) + b_bias))"
+      ],
+      "metadata": {
+        "id": "PU_pfcSuJAag",
+        "outputId": "3743b5a7-bf64-4d00-f8d4-52f45c77a55a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Movie Dataset:\n",
+            "   MattDamon  Thriller  Nolan  IMDB  Like\n",
+            "0          1         1      0  0.90     1\n",
+            "1          0         1      1  0.80     1\n",
+            "2          1         0      0  0.60     1\n",
+            "3          0         0      1  0.40     0\n",
+            "4          1         1      1  0.85     1\n",
+            "5          0         0      0  0.30     0\n",
+            "6          1         0      0  0.70     1\n",
+            "7          0         1      1  0.50     0\n",
+            "\n",
+            "--- MP Perceptron (No weights, No bias) ---\n",
+            "Actual: 1  Predicted: 1\n",
+            "Actual: 1  Predicted: 1\n",
+            "Actual: 1  Predicted: 1\n",
+            "Actual: 0  Predicted: 1\n",
+            "Actual: 1  Predicted: 1\n",
+            "Actual: 0  Predicted: 1\n",
+            "Actual: 1  Predicted: 1\n",
+            "Actual: 0  Predicted: 1\n",
+            "\n",
+            "Training Perceptron (Weights only)\n",
+            "Epoch 1, Weights: [ 0.1    0.    -0.1   -0.035], Errors: 4\n",
+            "Epoch 2, Weights: [ 0.1    0.1   -0.1   -0.025], Errors: 3\n",
+            "Epoch 3, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 4\n",
+            "Epoch 4, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 5, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 6, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 7, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 8, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 9, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "Epoch 10, Weights: [ 0.1    0.1   -0.2   -0.065], Errors: 3\n",
+            "\n",
+            "Training Perceptron (Weights + Bias)\n",
+            "Epoch 1, Weights: [ 0.1    0.    -0.1   -0.035], Bias: -0.2, Errors: 4\n",
+            "Epoch 2, Weights: [ 0.2    0.1   -0.2    0.045], Bias: -0.2, Errors: 4\n",
+            "Epoch 3, Weights: [ 0.2    0.1   -0.2    0.075], Bias: -0.2, Errors: 2\n",
+            "Epoch 4, Weights: [ 0.2    0.1   -0.2    0.105], Bias: -0.2, Errors: 2\n",
+            "Epoch 5, Weights: [ 0.2    0.1   -0.2    0.135], Bias: -0.2, Errors: 2\n",
+            "Epoch 6, Weights: [ 0.2    0.1   -0.2    0.165], Bias: -0.2, Errors: 2\n",
+            "Epoch 7, Weights: [ 0.2    0.1   -0.2    0.195], Bias: -0.2, Errors: 2\n",
+            "Epoch 8, Weights: [ 0.2    0.1   -0.2    0.225], Bias: -0.2, Errors: 2\n",
+            "Epoch 9, Weights: [ 0.2    0.1   -0.2    0.255], Bias: -0.2, Errors: 2\n",
+            "Epoch 10, Weights: [ 0.2    0.1   -0.2    0.255], Bias: -0.30000000000000004, Errors: 3\n",
+            "\n",
+            "--- Testing Sample Movie ---\n",
+            "Sample features: [1.  1.  0.  0.8]\n",
+            "MP Perceptron Prediction: 1\n",
+            "Perceptron (Weights only): 1\n",
+            "Perceptron (Weights + Bias): 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#WEEK-3"
+      ],
+      "metadata": {
+        "id": "xVen6yonrc4m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Input patterns\n",
+        "X = np.array([\n",
+        "    [0, 0],\n",
+        "    [0, 1],\n",
+        "    [1, 0],\n",
+        "    [1, 1]\n",
+        "])\n",
+        "\n",
+        "# All 16 Boolean functions (outputs)\n",
+        "boolean_functions = {\n",
+        "    \"f1\":  [0,0,0,0],\n",
+        "    \"f2\":  [0,0,0,1],   # AND\n",
+        "    \"f3\":  [0,0,1,0],\n",
+        "    \"f4\":  [0,0,1,1],\n",
+        "    \"f5\":  [0,1,0,0],\n",
+        "    \"f6\":  [0,1,0,1],\n",
+        "    \"f7\":  [0,1,1,0],   # XOR\n",
+        "    \"f8\":  [0,1,1,1],\n",
+        "    \"f9\":  [1,0,0,0],\n",
+        "    \"f10\": [1,0,0,1],   # XNOR\n",
+        "    \"f11\": [1,0,1,0],\n",
+        "    \"f12\": [1,0,1,1],\n",
+        "    \"f13\": [1,1,0,0],\n",
+        "    \"f14\": [1,1,0,1],\n",
+        "    \"f15\": [1,1,1,0],\n",
+        "    \"f16\": [1,1,1,1]\n",
+        "}\n",
+        "\n",
+        "# Step function\n",
+        "def step(x):\n",
+        "    return 1 if x >= 0 else 0\n",
+        "\n",
+        "# Train single perceptron\n",
+        "def train_perceptron(X, y, lr=0.1, epochs=50):\n",
+        "    w = np.zeros(X.shape[1])\n",
+        "    b = 0\n",
+        "\n",
+        "    for _ in range(epochs):\n",
+        "        error_count = 0\n",
+        "        for i in range(len(X)):\n",
+        "            y_pred = step(np.dot(X[i], w) + b)\n",
+        "            error = y[i] - y_pred\n",
+        "            if error != 0:\n",
+        "                w += lr * error * X[i]\n",
+        "                b += lr * error\n",
+        "                error_count += 1\n",
+        "        if error_count == 0:\n",
+        "            return True   # Converged\n",
+        "\n",
+        "    return False  # Did not converge\n",
+        "\n",
+        "# Test all Boolean functions\n",
+        "not_learnable = []\n",
+        "\n",
+        "print(\"Perceptron Learning Results:\\n\")\n",
+        "\n",
+        "for fname, outputs in boolean_functions.items():\n",
+        "    y = np.array(outputs)\n",
+        "    converged = train_perceptron(X, y)\n",
+        "    result = \"Learnable\" if converged else \"NOT Learnable\"\n",
+        "    print(f\"{fname}: {result}\")\n",
+        "    if not converged:\n",
+        "        not_learnable.append(fname)\n",
+        "\n",
+        "print(\"\\nSummary:\")\n",
+        "print(\"Total Boolean functions:\", len(boolean_functions))\n",
+        "print(\"Learnable:\", len(boolean_functions) - len(not_learnable))\n",
+        "print(\"Not Learnable:\", len(not_learnable))\n",
+        "print(\"Not Learnable Functions:\", not_learnable)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6hgvtBiXrin2",
+        "outputId": "3d9ef2b2-eb18-4cba-93ad-99599bffa772"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Perceptron Learning Results:\n",
+            "\n",
+            "f1: Learnable\n",
+            "f2: Learnable\n",
+            "f3: Learnable\n",
+            "f4: Learnable\n",
+            "f5: Learnable\n",
+            "f6: Learnable\n",
+            "f7: NOT Learnable\n",
+            "f8: Learnable\n",
+            "f9: Learnable\n",
+            "f10: NOT Learnable\n",
+            "f11: Learnable\n",
+            "f12: Learnable\n",
+            "f13: Learnable\n",
+            "f14: Learnable\n",
+            "f15: Learnable\n",
+            "f16: Learnable\n",
+            "\n",
+            "Summary:\n",
+            "Total Boolean functions: 16\n",
+            "Learnable: 14\n",
+            "Not Learnable: 2\n",
+            "Not Learnable Functions: ['f7', 'f10']\n"
+          ]
+        }
+      ]
     }
   ]
 }
